syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.currencyrateprovider.grpc";
option java_outer_classname = "CurrencyRateProto";

package currency;

service CurrencyRateService {
  rpc GetRate (RateRequest) returns (RateResponse);
}

message RateRequest {
  string from_currency = 1;
  string to_currency = 2;
}

message RateResponse {
  string from_currency = 1;
  string to_currency = 2;
  double rate = 3;
  string timestamp = 4;
}